[package]
name = "toweth"
version = "0.1.0"
authors = ["James Prestwich <james@prestwi.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.51"
ethers = { git = "https://github.com/gakonst/ethers-rs", branch = "master" }
futures-channel = "0.3.18"
futures-core = "0.3.17"
futures-timer = "3.0.2"
futures-util = "0.3.17"
hex = "0.4.3"
paste = "1.0.6"
pin-project = "1.0.8"
reqwest = "0.11.6"
serde = "1.0.130"
serde_json = "1.0.70"
thiserror = "1.0.30"
tokio = "1.14.0"
tokio-tungstenite = "0.16.0"
tracing = "0.1.29"
tungstenite = "0.16.0"
url = "2.2.2"

[dev-dependencies]
tokio = { version="1.14.0", features = ["macros"] }
