[package]
name = "ethers-middleware-experimental"
version = "0.1.0"
authors = ["James Prestwich <james@prestwi.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
# ethers-core = { version = "^0.6.0", path = "../ethers-core", default-features = false }

ethers = { path = "../ethers-rs" }
paste = "1.0.6"
async-trait = { version = "0.1.50", default-features = false }
hex = { version = "0.4.3", default-features = false, features = ["std"] }
reqwest = { version = "0.11.6", default-features = false, features = ["json"] }
serde = { version = "1.0.124", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.64", default-features = false }
thiserror = { version = "1.0.30", default-features = false }
url = { version = "2.2.2", default-features = false }
auto_impl = { version = "0.5.0", default-features = false }

# required for implementing stream on the filters
futures-core = { version = "0.3.16", default-features = false }
futures-util = { version = "0.3.18" }
futures-timer = { version = "3.0.2", default-features = false }
futures-channel = { version = "0.3.16", default-features = false }
pin-project = { version = "1.0.7", default-features = false }

# tracing
tracing = { version = "0.1.29", default-features = false }
tracing-futures = { version = "0.2.5", default-features = false, features = ["std-future"] }

bytes = { version  = "1.1.0", default-features = false, optional = true }

# non-WASM deps
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# tokio
tokio-util = { version = "0.6.9", default-features = false, features = ["io"], optional = true }
tokio = { version = "1.5", default-features = false, optional = true }
tokio-tungstenite = { version = "0.15.0", default-features = false, features = ["connect"], optional = true }

# WASM-only deps
[target.'cfg(target_arch = "wasm32")'.dependencies]
ws_stream_wasm = "0.7"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version  = "0.3", features = ["console"] }
wasm-timer = "0.2"
# this is currently necessary for `wasm-timer::Delay` to work
parking_lot = { version = "0.11", features = ["wasm-bindgen"] }

# non-WASM dev-deps
[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
tokio = { version = "1.5", default-features = false, features = ["rt", "macros"] }
tempfile = "3.2.0"

[features]
default = ["ws", "ipc", "rustls"]
ws = ["tokio", "tokio-tungstenite"]
ipc = ["tokio", "tokio/io-util", "tokio-util", "bytes"]

openssl = ["tokio-tungstenite/native-tls", "reqwest/native-tls"]
rustls = ["tokio-tungstenite/rustls-tls", "reqwest/rustls-tls"]
